--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Color+Emoji&display=swap');
+
 /* Importar Tailwind CSS */
 @tailwind base;
 @tailwind components;
@@ -9,7 +11,7 @@
 :root {
   /* Tipografía */
   font-size: 16px; /* Tamaño base de fuente */
-  font-family: 'Inter', sans-serif; /* Cambia la fuente si lo deseas */
+  font-family: 'Roboto', 'Noto Color Emoji', sans-serif; /*
 
   /* Espaciados */
   --spacing-base: 1rem;
